GNOME Bugzilla – Bug 631083
fails to build due to deprecated gtk_dialog_set_has_separator()
Last modified: 2010-10-07 07:00:54 UTC
cc1: warnings being treated as errors wireless-dialog.c: In function ‘internal_init’: wireless-dialog.c:1072: error: implicit declaration of function ‘gtk_dialog_set_has_separator’ gtk_dialog_set_has_separator() has been marked as deprecated and will be removed in GTK 3.
Created attachment 171477 [details] [review] patch Trivial patch. OK for me to push this?
Yes please! Please cherry-pick the patch to NMA_0_8 branch as well.
Pushed to both branches.