Drop deprecated gtk_dialog_set_has_separator()

https://bugzilla.gnome.org/show_bug.cgi?id=631083